--- a/templates/BlogTemplate/styles.css
+++ b/templates/BlogTemplate/styles.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
-    padding: 8px;
+    font-family: Vazir FD, sans-serif;
+    direction: rtl;
 }
 
 .blog-template{
@@ -52,7 +52,7 @@ body {
   position: relative;
 }
 
-main {
+.blog-template main {
   direction: rtl;
   
   padding: 20px;
@@ -61,7 +61,7 @@ main {
   background-color: #f9f9f9;
 }
 
-ol{
+.blog-template ol{
   list-style-type: persian;
 }
   
@@ -86,6 +86,6 @@ ol{
 }
 
 
-footer{
+.blog-template footer{
   padding: 20px;
 }
