--- a/templates/BlogTemplate/styles.css
+++ b/templates/BlogTemplate/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 
-.sidebar {
+.blog-template .sidebar {
   width: 250px;
   background-color: #f4f4f4;
   padding: 20px;
@@ -19,36 +19,40 @@ body {
   box-sizing: border-box;
 }
 
-.sidebar .container {
+.blog-template .sidebar .container {
   position: sticky;
   top: 28px;
-
 }
 
-.sidebar h2 {
+.blog-template .sidebar .active {
+  font-weight: bold;
+  color: #1c39bb;
+}
+
+.blog-template .sidebar h2 {
   margin-top: 0;
 }
 
-.sidebar ul {
+.blog-template .sidebar ul {
   list-style-type: none;
   padding: 0;
 }
 
-.sidebar ul li {
+.blog-template .sidebar ul li {
   margin-bottom: 10px;
 }
 
-.sidebar ul li a {
+.blog-template .sidebar ul li a {
   text-decoration: none;
   color: #333;
 }
 
-.sidebar ul li a:hover {
+.blog-template .sidebar ul li a:hover {
   color: #007bff;
 }
 
 
-.markdown-container{
+.blog-template .markdown-container{
   position: relative;
 }
 
@@ -67,19 +71,19 @@ body {
   
 
 /* custom poet style */
-.poet {
+.blog-template .poet {
   max-width: fit-content;
   justify-self: center;
 }
 
-.stanza{
+.blog-template .stanza{
   width: 225px;
   height: 32px;
   text-align: justify !important;
   display: inline-block;
 }
 
-.stanza:after {
+.blog-template .stanza:after {
   content: "";
   display: inline-block;
   width: 100%;	
