make dynamic template and plugins loading

--- a/templates/BlogTemplate/styles.css
+++ b/templates/BlogTemplate/styles.css
@@ -54,6 +54,8 @@ body {
 
 .blog-template .markdown-container{
   position: relative;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .blog-template main {
